# breezeway

./: .gitignore  BreezewayConfig.cmake.in  CMakeLists.txt  README.md  breezewaymod.files  breezewaymod.includes
kdecoration/: CMakeLists.txt  breezeway.h  breezeway.json  breezewaybutton.cpp  breezewaybutton.h  breezewaydecoration.cpp  breezewaydecoration.h  breezewayexceptionlist.cpp  breezewayexceptionlist.h  breezewaysettings.kcfgc  breezewaysettingsdata.kcfg  breezewaysettingsprovider.cpp  breezewaysettingsprovider.h  breezewaysizegrip.cpp  breezewaysizegrip.h  config-breezeway.h.cmake
kdecoration/config/: breezewayconfigwidget.cpp  breezewayconfigwidget.h  breezewaydecorationconfig.desktop  breezewaydetectwidget.cpp  breezewaydetectwidget.h  breezewayexceptiondialog.cpp  breezewayexceptiondialog.h  breezewayexceptionlistwidget.cpp  breezewayexceptionlistwidget.h  breezewayexceptionmodel.cpp  breezewayexceptionmodel.h  breezewayitemmodel.cpp  breezewayitemmodel.h  breezewaylistmodel.h
kdecoration/config/ui/: breezewayconfigurationui.ui  breezewayconfigurationui.ui.autosave  breezewayexceptiondialog.ui
libbreezewaycommon/: CMakeLists.txt  breezewayboxshadowrenderer.cpp  breezewayboxshadowrenderer.h
